# sql-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: ci.yml
docs/: CHANGELOG.md  design.md  development.md
src/: CMakeLists.txt  main.cpp
src/catalog/: CMakeLists.txt  catalog.cpp  catalog.h
src/common/: CMakeLists.txt  logger.cpp  logger.h  schema.cpp  schema.h  tuple.cpp  tuple.h  types.h  value.cpp  value.h
src/execution/: CMakeLists.txt  executor.cpp  executor.h  filter.cpp  filter.h  hash_join.cpp  hash_join.h  index_nested_loop_join.cpp  index_nested_loop_join.h  index_scan.cpp  index_scan.h  nested_loop_join.cpp  nested_loop_join.h  operator.h  projection.cpp  projection.h  seq_scan.cpp  seq_scan.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  token.cpp  token.h
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.h
src/parser/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h
src/storage/: CMakeLists.txt  btree.cpp  btree.h  buffer_pool.cpp  buffer_pool.h  disk_manager.cpp  disk_manager.h  page.cpp  page.h  table.cpp  table.h
test/: CMakeLists.txt
test/common/: schema_test.cpp  tuple_test.cpp  value_test.cpp
test/integration/: query_test.cpp
test/lexer/: lexer_test.cpp
test/parser/: parser_test.cpp
